testing/tests/ui/block_in_filter_block.stderr
error: the previous template error derives from
 --> tests/ui/block_in_filter_block.rs:5:5
  |
5 |     source = r#"{% extends "html-base.html" %}
  |     ^^^^^^
